@@ -11,6 +11,7 @@
       <Entry build="True" name="libnsm" configuration="Release" />
     </Configuration>
   </Configurations>
+  <DeployTargets />
   <StartMode startupentry="nsm" single="True">
     <Execute type="None" entry="dbus-sharp" />
     <Execute type="None" entry="nsm" />
